AC_PREREQ(2.59)
AC_INIT([gssvpn],[0.5],[jbreams@gmail.com])
AM_INIT_AUTOMAKE([foreign 1.9])
AC_CONFIG_HEADERS([config.h])
AC_DEFINE([EV_CONFIG_H], [../config.h], [Make libev use global config.h])

AC_PROG_RANLIB

AC_INCLUDES_DEFAULT
AC_CHECK_HEADERS([fcntl.h netdb.h netinit/in.h pwd.h sys/ioctl syslog.h net/ethernet.h arpa/inet.h])
AC_CHECK_HEADER([net/if.h])
AC_CHECK_HEADER([gssapi/gssapi.h], [],
	[AC_MSG_ERROR([Requires GSSAPI header])])
AC_CHECK_HEADER([linux/if_tun.h],
	AC_DEFINE([HAVE_IF_TUN], [1], [Uses Linux TUN/TAP Driver]), [], [])
AC_CHECK_HEADER([linux/sockios.h],
	AC_DEFINE([HAVE_LINUX_SOCKIOS_H], [], [Uses Linux ioctl]), [], [])

AC_SEARCH_LIBS([gss_accept_sec_context], [gssapi gssapi_krb5])
AC_SEARCH_LIBS([gethostbyname], [resolve nsl])
AC_SEARCH_LIBS([socket], [socket])

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_C_CONST

AC_CHECK_FUNCS([gss_accept_sec_context gss_init_sec_context \
	gss_wrap gss_unwrap gss_delete_sec_context gss_release_buffer \
	gss_acquire_cred], [], [AC_MSG_ERROR([Missing GSSAPI functions])])
AC_CHECK_FUNCS([ioctl setsockopt bind recvfrom sendto socket])
AC_CHECK_FUNCS(memcmp memcpy memmove memset)

CPPFLAGS_save="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS -FKerberos"
AC_CHECK_HEADER([Kerberos/KerberosLogin.h],
	AC_DEFINE([HAVE_KERBEROSLOGIN_H], [1], [Has OSX Kerberos]) \
		LIBS="$LIBS -framework Kerberos",
	CFLAGS="$CPPFLAGS_save")

m4_include([libev/libev.m4])

AC_CHECK_TYPE(ptrdiff_t,long)
AC_TYPE_SIZE_T
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(__int64)
AC_CHECK_SIZEOF(void *)
AC_CHECK_SIZEOF(size_t)
AC_CHECK_SIZEOF(ptrdiff_t)

AC_SEARCH_LIBS([gss_accept_sec_context], [gssapi gssapi_krb5])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
